--- a/public/helmet.html
+++ b/public/helmet.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1 id="aid"></h1>
-
+<div><audio id="audio" autoplay controls></audio></div>
 
 <script src="javascripts/socket.io.js"></script>
 <script src="javascripts/adapter.js"></script>
