group panel 和 一个 mask

--- a/public/panel.html
+++ b/public/panel.html
@@ -11,48 +11,65 @@
 <body>
 
 <main>
-<div class="row">
-  <div class="col s2">
-    <a v-if="seen" class='dropdown-button btn' href='#' data-activates='loginList'id="choose">请选择登录人员</a>
-    <ul v-if="seen" class="dropdown-content" id="loginList">
-      <login-item v-for="name in names" :name="name"></login-item>
-    </ul>
+  <div class="row" id = "back">
+    <div class="col s2">
+      <a v-if="seen" class='dropdown-button btn' href='#' data-activates='loginList'id="choose">请选择登录人员</a>
+      <ul v-if="seen" class="dropdown-content" id="loginList">
+        <login-item v-for="name in names" :name="name"></login-item>
+      </ul>
 
-    <div id = "loginInfo" v-if="seen">
-      <p>当前登录的用户是</p>
-      <p> {{ name }}</p>
+      <div id = "loginInfo" v-if="seen">
+        <p>当前登录的用户是</p>
+        <p> {{ name }}</p>
+      </div>
     </div>
-  </div>
 
-  <div id="contact" class="col s3">
-    <div class>
-      <user v-for="item in users" :user="item"></user>
+    <div id="contact" class="col s3">
+      <div class>
+        <user v-for="item in users" :user="item"></user>
+      </div>
     </div>
-  </div>
 
-  <div id="groups" class="col s7">
-    <group v-for="group in groups" :group="group"></group>
+    <div id="groups" class="col s7">
+      <group v-for="group in groups" :group="group"></group>
+    </div>
   </div>
 
   <div v-if="seen" id="callee" class="card-panel vertical-center">
 
-      <h2>被叫面板</h2>
-      <a @click="accept" class="waves-effect waves-light btn green">接听</a>
-      <a @click="refuse" class="waves-effect waves-light btn red">拒绝</a>
+    <h2>被叫面板</h2>
+    <a @click="accept" class="waves-effect waves-light btn green">接听</a>
+    <a @click="refuse" class="waves-effect waves-light btn red">拒绝</a>
+
+  </div>
+
+  <div v-if="seen" id="mask">
 
   </div>
 
   <div v-if="seen" id="talk" class="card-panel vertical-center">
-      <h2>通话面板</h2>
-      <a @click="hangup" class="waves-effect waves-light btn red">结束通话</a>
+    <h2>通话面板</h2>
+    <a @click="hangup" class="waves-effect waves-light btn red">结束通话</a>
   </div>
 
   <div v-if="seen" id="call" class="card-panel vertical-center">
-      <h2>主叫面板</h2>
-      <p> 正在呼叫 {{ target }} </p>
+    <h2>主叫面板</h2>
+    <p> 正在呼叫 {{ target }} </p>
     <a @click="hangup" class="waves-effect waves-light btn red">挂断</a>
   </div>
-</div>
+
+  <div v-if="seen" id="groupCall" class="card-panel vertical-center">
+    <h2>群组主叫面板</h2>
+    <p> 当前小组 {{ name }} </p>
+    <p> 当前加入的人 </p>
+    <p v-for="client in clients"> {{ client }}</p>
+    <a @click="hangup" class="waves-effect waves-light btn red">挂断</a>
+  </div>
+
+  <div v-if="seen" id="groupCallee" class="card-panel vertical-center">
+    <h2>群组被叫面板</h2>
+    <p> 来自 {{ from }} 的群组广播</p>
+  </div>
 </main>
 
 
