--- a/public/panel.html
+++ b/public/panel.html
@@ -21,6 +21,7 @@
       <div id = "loginInfo" v-if="seen">
         <p>当前登录的用户是</p>
         <p> {{ name }}</p>
+        <p> {{ org }}</p>
       </div>
     </div>
 
@@ -73,7 +74,7 @@
 </main>
 
 
-<div><audio id="audio" autoplay controls></audio></div>
+<div><audio id="audio" autoplay></audio></div>
 
 
 
