服务器地址单独放在一个文件

--- a/public/panel.html
+++ b/public/panel.html
@@ -85,7 +85,7 @@
 <!--<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>-->
 <script type="text/javascript" src="javascripts/jquery.min.js"></script>
 <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
-
+<script src="javascripts/ServerAddress.js"></script>
 <script src="javascripts/socket.io.js"></script>
 <script src="javascripts/adapter.js"></script>
 <script src="javascripts/WebRTCClient.js"></script>
